--- a/projeto-hotel-ateneu/pom.xml
+++ b/projeto-hotel-ateneu/pom.xml
@@ -7,14 +7,25 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<description>Projeto para nota das disciplinas engenharia de software, programação web e atividade interdisciplinar 4 </description>
-	
+
 	<repositories>
 		<repository>
 			<id>jvnet-nexus-releases</id>
 			<name>jvnet-nexus-releases</name>
 			<url>https://maven.java.net/content/repositories/releases/</url>
 		</repository>
+
+		<!-- Primefaces -->
+		<repository>
+			<id>prime-repo</id>
+			<name>PrimeFaces Maven Repository</name>
+			<url>http://repository.primefaces.org</url>
+			<layout>default</layout>
+		</repository>
+		
 	</repositories>
+
+
 
 	<dependencies>
 		<!-- Java Server Faces -->
@@ -29,6 +40,19 @@
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.faces</artifactId>
 			<version>2.2.10</version>
+		</dependency>
+
+		<!-- dependencia primefaces -->
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>glass-x</artifactId>
+			<version>1.0.6</version>
 		</dependency>
 
 		<!-- Hibernate -->
@@ -83,6 +107,8 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			
+			
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>2.7</version>
@@ -91,5 +117,5 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>	
+	</build>
 </project>
