--- a/projeto-hotel-ateneu/src/main/webapp/WEB-INF/web.xml
+++ b/projeto-hotel-ateneu/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,9 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.jsf</url-pattern>
 	</servlet-mapping>
+	
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>glass-x</param-value>
+	</context-param>
 </web-app>
