--- a/projeto-hotel-ateneu/pom.xml
+++ b/projeto-hotel-ateneu/pom.xml
@@ -21,8 +21,7 @@
 			<name>PrimeFaces Maven Repository</name>
 			<url>http://repository.primefaces.org</url>
 			<layout>default</layout>
-		</repository>
-		
+		</repository>		
 	</repositories>
 
 
@@ -47,6 +46,13 @@
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
 			<version>6.0</version>
+			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
 		</dependency>
 		
 		<dependency>
