--- a/projeto-hotel-ateneu/pom.xml
+++ b/projeto-hotel-ateneu/pom.xml
@@ -33,6 +33,13 @@
 			<version>2.2.10</version>
 		</dependency>
 
+		<!-- Bootfaces -->
+		<dependency>
+			<groupId>net.bootsfaces</groupId>
+			<artifactId>bootsfaces</artifactId>
+			<version>1.2.0</version>
+			<scope>compile</scope>
+		</dependency>
 
 		<!-- Hibernate -->
 		<dependency>
